Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13227

Assertion failure len < 16384 in file rem0rec.cc line 1285

    XMLWordPrintable

Details

    Description

      A user has seen crashes like the following when running INSERT INTO ... SELECT FROM ... queries:

      2017-06-30 12:57:49 7faa1cd0fb00  InnoDB: Error: trying to access tablespace 1684631143 page no. 761425780,
      InnoDB: but the tablespace does not exist or is just being dropped.
      InnoDB: Error: Unable to read tablespace 1684631143 page no 761425780 into the buffer pool after 100 attempts
      InnoDB: The most probable cause of this error may be that the table has been corrupted.
      InnoDB: You can try to fix this problem by using innodb_force_recovery.
      InnoDB: Please see reference manual for more details.
      InnoDB: Aborting...
      2017-06-30 12:57:49 7faa1cd0fb00  InnoDB: Assertion failure in thread 140368604625664 in file buf0buf.cc line 3009
      InnoDB: We intentionally generate a memory trap.
      InnoDB: Submit a detailed bug report to http://bugs.mysql.com.
      InnoDB: If you get repeated assertion failures or crashes, even
      InnoDB: immediately after the mysqld startup, there may be
      InnoDB: corruption in the InnoDB tablespace. Please refer to
      InnoDB: http://dev.mysql.com/doc/refman/5.6/en/forcing-innodb-recovery.html
      InnoDB: about forcing recovery.
      170630 12:57:49 [ERROR] mysqld got signal 6 ;
      This could be because you hit a bug. It is also possible that this binary
      or one of the libraries it was linked against is corrupt, improperly built,
      or misconfigured. This error can also be caused by malfunctioning hardware.
       
      To report this bug, see http://kb.askmonty.org/en/reporting-bugs
       
      We will try our best to scrape up some info that will hopefully help
      diagnose the problem, but since we have already crashed, 
      something is definitely wrong and this may fail.
       
      Server version: 10.1.11-MariaDB-enterprise-log
      key_buffer_size=67108864
      read_buffer_size=131072
      max_used_connections=159
      max_threads=1002
      thread_count=29
      It is possible that mysqld could use up to 
      key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 2266369 K  bytes of memory
      Hope that's ok; if not, decrease some variables in the equation.
       
      Thread pointer: 0x0x7faa0f8b7008
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      stack_bottom = 0x7faa1cd0f0f0 thread_stack 0x48400
      /usr/sbin/mysqld(my_print_stacktrace+0x2e)[0x7fab122e3cce]
      /usr/sbin/mysqld(handle_fatal_signal+0x38d)[0x7fab11e1149d]
      /lib64/libpthread.so.0(+0xf370)[0x7fab11433370]
      /lib64/libc.so.6(gsignal+0x37)[0x7fab0f7891d7]
      /lib64/libc.so.6(abort+0x148)[0x7fab0f78a8c8]
      /usr/sbin/mysqld(+0x87afa0)[0x7fab120dcfa0]
      /usr/sbin/mysqld(+0x855481)[0x7fab120b7481]
      /usr/sbin/mysqld(+0x863a17)[0x7fab120c5a17]
      /usr/sbin/mysqld(+0x37c14e)[0x7fab11bde14e]
      /usr/sbin/mysqld(+0x37c33c)[0x7fab11bde33c]
      /usr/sbin/mysqld(+0x7f3d98)[0x7fab12055d98]
      /usr/sbin/mysqld(+0x72d9da)[0x7fab11f8f9da]
      /usr/sbin/mysqld(_ZN7handler18index_read_idx_mapEPhjPKhm16ha_rkey_function+0x85)[0x7fab11e11cc5]
      /usr/sbin/mysqld(_ZN7handler21ha_index_read_idx_mapEPhjPKhm16ha_rkey_function+0x17c)[0x7fab11e1624c]
      /usr/sbin/mysqld(+0x477094)[0x7fab11cd9094]
      /usr/sbin/mysqld(+0x374128)[0x7fab11bd6128]
      /usr/sbin/mysqld(+0x375a5a)[0x7fab11bd7a5a]
      /usr/sbin/mysqld(_ZN4JOIN14optimize_innerEv+0x818)[0x7fab11ce4548]
      /usr/sbin/mysqld(_ZN4JOIN8optimizeEv+0x1b)[0x7fab11ce6d1b]
      /usr/sbin/mysqld(_Z12mysql_selectP3THDPPP4ItemP10TABLE_LISTjR4ListIS1_ES2_jP8st_orderSB_S2_SB_yP13select_resultP18st_select_lex_unitP13st_select_lex+0x8f)[0x7fab11ce6e6f]
      /usr/sbin/mysqld(_Z13handle_selectP3THDP3LEXP13select_resultm+0x245)[0x7fab11ce79d5]
      /usr/sbin/mysqld(_Z21mysql_execute_commandP3THD+0x7aee)[0x7fab11c97c2e]
      /usr/sbin/mysqld(_Z11mysql_parseP3THDPcjP12Parser_state+0x22e)[0x7fab11c9986e]
      /usr/sbin/mysqld(_Z16dispatch_command19enum_server_commandP3THDPcj+0x25db)[0x7fab11c9cd2b]
      /usr/sbin/mysqld(_Z10do_commandP3THD+0x169)[0x7fab11c9d5a9]
      /usr/sbin/mysqld(_Z24do_handle_one_connectionP3THD+0x18a)[0x7fab11d6078a]
      /usr/sbin/mysqld(handle_one_connection+0x40)[0x7fab11d60960]
      /lib64/libpthread.so.0(+0x7dc5)[0x7fab1142bdc5]
      /lib64/libc.so.6(clone+0x6d)[0x7fab0f84b76d]
      

      And they have seen other similar crashes previously when executing the same or similar queries on completely different servers:

      2017-06-26 23:03:10 7fd92991ab00  InnoDB: Error: trying to access tablespace 1734898746 page no. 544040292,
      InnoDB: but the tablespace does not exist or is just being dropped.
      InnoDB: Error: Unable to read tablespace 1734898746 page no 544040292 into the buffer pool after 100 attempts
      InnoDB: The most probable cause of this error may be that the table has been corrupted.
      InnoDB: You can try to fix this problem by using innodb_force_recovery.
      InnoDB: Please see reference manual for more details.
      InnoDB: Aborting...
      2017-06-26 23:03:10 7fd92991ab00  InnoDB: Assertion failure in thread 140570682043136 in file buf0buf.cc line 3009
      InnoDB: We intentionally generate a memory trap.
      InnoDB: Submit a detailed bug report to http://bugs.mysql.com.
      InnoDB: If you get repeated assertion failures or crashes, even
      InnoDB: immediately after the mysqld startup, there may be
      InnoDB: corruption in the InnoDB tablespace. Please refer to
      InnoDB: http://dev.mysql.com/doc/refman/5.6/en/forcing-innodb-recovery.html
      InnoDB: about forcing recovery.
      170626 23:03:10 [ERROR] mysqld got signal 6 ;
      This could be because you hit a bug. It is also possible that this binary
      or one of the libraries it was linked against is corrupt, improperly built,
      or misconfigured. This error can also be caused by malfunctioning hardware.
       
      To report this bug, see http://kb.askmonty.org/en/reporting-bugs
       
      We will try our best to scrape up some info that will hopefully help
      diagnose the problem, but since we have already crashed, 
      something is definitely wrong and this may fail.
       
      Server version: 10.1.11-MariaDB-enterprise-log
      key_buffer_size=67108864
      read_buffer_size=131072
      max_used_connections=252
      max_threads=7502
      thread_count=158
      It is possible that mysqld could use up to 
      key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 8861317 K  bytes of memory
      Hope that's ok; if not, decrease some variables in the equation.
       
      Thread pointer: 0x0x7fd920c1d008
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      stack_bottom = 0x7fd92991a0f0 thread_stack 0x48400
      /usr/sbin/mysqld(my_print_stacktrace+0x2e)[0x7fdb00ab8cce]
      /usr/sbin/mysqld(handle_fatal_signal+0x38d)[0x7fdb005e649d]
      /lib64/libpthread.so.0(+0xf370)[0x7fdaffc08370]
      /lib64/libc.so.6(gsignal+0x37)[0x7fdafdf5e1d7]
      /lib64/libc.so.6(abort+0x148)[0x7fdafdf5f8c8]
      /usr/sbin/mysqld(+0x87afa0)[0x7fdb008b1fa0]
      /usr/sbin/mysqld(+0x855481)[0x7fdb0088c481]
      /usr/sbin/mysqld(+0x863a17)[0x7fdb0089aa17]
      /usr/sbin/mysqld(+0x37c14e)[0x7fdb003b314e]
      /usr/sbin/mysqld(+0x37c33c)[0x7fdb003b333c]
      /usr/sbin/mysqld(+0x7f3d98)[0x7fdb0082ad98]
      /usr/sbin/mysqld(+0x72d9da)[0x7fdb007649da]
      /usr/sbin/mysqld(_ZN7handler18index_read_idx_mapEPhjPKhm16ha_rkey_function+0x85)[0x7fdb005e6cc5]
      /usr/sbin/mysqld(_ZN7handler21ha_index_read_idx_mapEPhjPKhm16ha_rkey_function+0x17c)[0x7fdb005eb24c]
      /usr/sbin/mysqld(+0x477094)[0x7fdb004ae094]
      /usr/sbin/mysqld(+0x374128)[0x7fdb003ab128]
      /usr/sbin/mysqld(+0x375a5a)[0x7fdb003aca5a]
      /usr/sbin/mysqld(_ZN4JOIN14optimize_innerEv+0x818)[0x7fdb004b9548]
      /usr/sbin/mysqld(_ZN4JOIN8optimizeEv+0x1b)[0x7fdb004bbd1b]
      /usr/sbin/mysqld(_Z12mysql_selectP3THDPPP4ItemP10TABLE_LISTjR4ListIS1_ES2_jP8st_orderSB_S2_SB_yP13select_resultP18st_select_lex_unitP13st_select_lex+0x8f)[0x7fdb004bbe6f]
      /usr/sbin/mysqld(_Z13handle_selectP3THDP3LEXP13select_resultm+0x245)[0x7fdb004bc9d5]
      /usr/sbin/mysqld(_Z21mysql_execute_commandP3THD+0x7aee)[0x7fdb0046cc2e]
      /usr/sbin/mysqld(_Z11mysql_parseP3THDPcjP12Parser_state+0x22e)[0x7fdb0046e86e]
      /usr/sbin/mysqld(_Z16dispatch_command19enum_server_commandP3THDPcj+0x25db)[0x7fdb00471d2b]
      /usr/sbin/mysqld(_Z10do_commandP3THD+0x169)[0x7fdb004725a9]
      mysys/stacktrace.c:247(my_print_stacktrace)[0x7fdb0053578a]
      sql/signal_handler.cc:160(handle_fatal_signal)[0x7fdb00535960]
      include/buf0buf.ic:208(buf_page_get_gen(unsigned long, unsigned long, unsigned long, unsigned long, buf_block_t*, unsigned long, char const*, unsigned long, mtr_t*, dberr_t*))[0x7fdaffc00dc5]
      btr/btr0cur.cc:5654(btr_copy_blob_prefix(unsigned char*, unsigned long, unsigned long, unsigned long, unsigned long, trx_t*))[0x7fdafe02073d]
      

      2017-05-23 16:56:44 7fdff6085b00  InnoDB: Error: trying to access tablespace 1667329568 page no. 1650794593,
      InnoDB: but the tablespace does not exist or is just being dropped.
      InnoDB: Error: Unable to read tablespace 1667329568 page no 1650794593 into the buffer pool after 100 attempts
      InnoDB: The most probable cause of this error may be that the table has been corrupted.
      InnoDB: You can try to fix this problem by using innodb_force_recovery.
      InnoDB: Please see reference manual for more details.
      InnoDB: Aborting...
      2017-05-23 16:56:44 7fdff6085b00  InnoDB: Assertion failure in thread 140599882177280 in file buf0buf.cc line 3009
      InnoDB: We intentionally generate a memory trap.
      InnoDB: Submit a detailed bug report to http://bugs.mysql.com.
      InnoDB: If you get repeated assertion failures or crashes, even
      InnoDB: immediately after the mysqld startup, there may be
      InnoDB: corruption in the InnoDB tablespace. Please refer to
      InnoDB: http://dev.mysql.com/doc/refman/5.6/en/forcing-innodb-recovery.html
      InnoDB: about forcing recovery.
      170523 16:56:44 [ERROR] mysqld got signal 6 ;
      This could be because you hit a bug. It is also possible that this binary
      or one of the libraries it was linked against is corrupt, improperly built,
      or misconfigured. This error can also be caused by malfunctioning hardware.
       
      To report this bug, see http://kb.askmonty.org/en/reporting-bugs
       
      We will try our best to scrape up some info that will hopefully help
      diagnose the problem, but since we have already crashed, 
      something is definitely wrong and this may fail.
       
      Server version: 10.1.11-MariaDB-enterprise-log
      key_buffer_size=67108864
      read_buffer_size=131072
      max_used_connections=70
      max_threads=1002
      thread_count=51
      It is possible that mysqld could use up to 
      key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 2266369 K  bytes of memory
      Hope that's ok; if not, decrease some variables in the equation.
       
      Thread pointer: 0x0x7fdf51a54008
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      stack_bottom = 0x7fdff60850f0 thread_stack 0x48400
      *** buffer overflow detected ***: /usr/sbin/mysqld terminated
      ======= Backtrace: =========
      /lib64/libc.so.6(__fortify_fail+0x37)[0x7fe007760047]
      /lib64/libc.so.6(+0x10d200)[0x7fe00775e200]
      /lib64/libc.so.6(+0x10efb7)[0x7fe00775ffb7]
      /usr/sbin/mysqld(my_addr_resolve+0x48)[0x7fe00a1f4768]
      /usr/sbin/mysqld(my_print_stacktrace+0x1c2)[0x7fe00a1e0e62]
      /usr/sbin/mysqld(handle_fatal_signal+0x38d)[0x7fe009d0e49d]
      /lib64/libpthread.so.0(+0xf370)[0x7fe009330370]
      /lib64/libc.so.6(gsignal+0x37)[0x7fe0076861d7]
      /lib64/libc.so.6(abort+0x148)[0x7fe0076878c8]
      /usr/sbin/mysqld(+0x87afa0)[0x7fe009fd9fa0]
      /usr/sbin/mysqld(+0x855481)[0x7fe009fb4481]
      /usr/sbin/mysqld(+0x863a17)[0x7fe009fc2a17]
      /usr/sbin/mysqld(+0x37c14e)[0x7fe009adb14e]
      /usr/sbin/mysqld(+0x37c33c)[0x7fe009adb33c]
      /usr/sbin/mysqld(+0x7f3d98)[0x7fe009f52d98]
      /usr/sbin/mysqld(+0x72fa09)[0x7fe009e8ea09]
      /usr/sbin/mysqld(_ZN7handler11ha_rnd_nextEPh+0x197)[0x7fe009d12d37]
      /usr/sbin/mysqld(_Z13rr_sequentialP11READ_RECORD+0x20)[0x7fe009e15580]
      /usr/sbin/mysqld(_Z10sub_selectP4JOINP13st_join_tableb+0x1fb)[0x7fe009bc7f4b]
      /usr/sbin/mysqld(+0x476b0d)[0x7fe009bd5b0d]
      /usr/sbin/mysqld(_ZN4JOIN10exec_innerEv+0xb4c)[0x7fe009be585c]
      /usr/sbin/mysqld(_ZN4JOIN4execEv+0x54)[0x7fe009be7854]
      /usr/sbin/mysqld(_Z12mysql_selectP3THDPPP4ItemP10TABLE_LISTjR4ListIS1_ES2_jP8st_orderSB_S2_SB_yP13select_resultP18st_select_lex_unitP13st_select_lex+0x112)[0x7fe009be3ef2]
      /usr/sbin/mysqld(_Z18mysql_multi_updateP3THDP10TABLE_LISTP4ListI4ItemES6_PS4_y15enum_duplicatesbP18st_select_lex_unitP13st_select_lexPP12multi_update+0x122)[0x7fe009c2b732]
      /usr/sbin/mysqld(_Z21mysql_execute_commandP3THD+0x69aa)[0x7fe009b93aea]
      /usr/sbin/mysqld(_Z11mysql_parseP3THDPcjP12Parser_state+0x22e)[0x7fe009b9686e]
      /usr/sbin/mysqld(_Z16dispatch_command19enum_server_commandP3THDPcj+0x25db)[0x7fe009b99d2b]
      /usr/sbin/mysqld(_Z10do_commandP3THD+0x169)[0x7fe009b9a5a9]
      /usr/sbin/mysqld(_Z24do_handle_one_connectionP3THD+0x18a)[0x7fe009c5d78a]
      /usr/sbin/mysqld(handle_one_connection+0x40)[0x7fe009c5d960]
      /lib64/libpthread.so.0(+0x7dc5)[0x7fe009328dc5]
      /lib64/libc.so.6(clone+0x6d)[0x7fe00774873d]
      

      2017-05-23 16:56:44 7fdff6085b00  InnoDB: Error: trying to access tablespace 1667329568 page no. 1650794593,
      InnoDB: but the tablespace does not exist or is just being dropped.
      InnoDB: Error: Unable to read tablespace 1667329568 page no 1650794593 into the buffer pool after 100 attempts
      InnoDB: The most probable cause of this error may be that the table has been corrupted.
      InnoDB: You can try to fix this problem by using innodb_force_recovery.
      InnoDB: Please see reference manual for more details.
      InnoDB: Aborting...
      2017-05-23 16:56:44 7fdff6085b00  InnoDB: Assertion failure in thread 140599882177280 in file buf0buf.cc line 3009
      InnoDB: We intentionally generate a memory trap.
      InnoDB: Submit a detailed bug report to http://bugs.mysql.com.
      InnoDB: If you get repeated assertion failures or crashes, even
      InnoDB: immediately after the mysqld startup, there may be
      InnoDB: corruption in the InnoDB tablespace. Please refer to
      InnoDB: http://dev.mysql.com/doc/refman/5.6/en/forcing-innodb-recovery.html
      InnoDB: about forcing recovery.
      170523 16:56:44 [ERROR] mysqld got signal 6 ;
      This could be because you hit a bug. It is also possible that this binary
      or one of the libraries it was linked against is corrupt, improperly built,
      or misconfigured. This error can also be caused by malfunctioning hardware.
       
      To report this bug, see http://kb.askmonty.org/en/reporting-bugs
       
      We will try our best to scrape up some info that will hopefully help
      diagnose the problem, but since we have already crashed, 
      something is definitely wrong and this may fail.
       
      Server version: 10.1.11-MariaDB-enterprise-log
      key_buffer_size=67108864
      read_buffer_size=131072
      max_used_connections=70
      max_threads=1002
      thread_count=51
      It is possible that mysqld could use up to 
      key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 2266369 K  bytes of memory
      Hope that's ok; if not, decrease some variables in the equation.
       
      Thread pointer: 0x0x7fdf51a54008
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      stack_bottom = 0x7fdff60850f0 thread_stack 0x48400
      *** buffer overflow detected ***: /usr/sbin/mysqld terminated
      ======= Backtrace: =========
      /lib64/libc.so.6(__fortify_fail+0x37)[0x7fe007760047]
      /lib64/libc.so.6(+0x10d200)[0x7fe00775e200]
      /lib64/libc.so.6(+0x10efb7)[0x7fe00775ffb7]
      /usr/sbin/mysqld(my_addr_resolve+0x48)[0x7fe00a1f4768]
      /usr/sbin/mysqld(my_print_stacktrace+0x1c2)[0x7fe00a1e0e62]
      /usr/sbin/mysqld(handle_fatal_signal+0x38d)[0x7fe009d0e49d]
      /lib64/libpthread.so.0(+0xf370)[0x7fe009330370]
      /lib64/libc.so.6(gsignal+0x37)[0x7fe0076861d7]
      /lib64/libc.so.6(abort+0x148)[0x7fe0076878c8]
      /usr/sbin/mysqld(+0x87afa0)[0x7fe009fd9fa0]
      /usr/sbin/mysqld(+0x855481)[0x7fe009fb4481]
      /usr/sbin/mysqld(+0x863a17)[0x7fe009fc2a17]
      /usr/sbin/mysqld(+0x37c14e)[0x7fe009adb14e]
      /usr/sbin/mysqld(+0x37c33c)[0x7fe009adb33c]
      /usr/sbin/mysqld(+0x7f3d98)[0x7fe009f52d98]
      /usr/sbin/mysqld(+0x72fa09)[0x7fe009e8ea09]
      /usr/sbin/mysqld(_ZN7handler11ha_rnd_nextEPh+0x197)[0x7fe009d12d37]
      /usr/sbin/mysqld(_Z13rr_sequentialP11READ_RECORD+0x20)[0x7fe009e15580]
      /usr/sbin/mysqld(_Z10sub_selectP4JOINP13st_join_tableb+0x1fb)[0x7fe009bc7f4b]
      /usr/sbin/mysqld(+0x476b0d)[0x7fe009bd5b0d]
      /usr/sbin/mysqld(_ZN4JOIN10exec_innerEv+0xb4c)[0x7fe009be585c]
      /usr/sbin/mysqld(_ZN4JOIN4execEv+0x54)[0x7fe009be7854]
      /usr/sbin/mysqld(_Z12mysql_selectP3THDPPP4ItemP10TABLE_LISTjR4ListIS1_ES2_jP8st_orderSB_S2_SB_yP13select_resultP18st_select_lex_unitP13st_select_lex+0x112)[0x7fe009be3ef2]
      /usr/sbin/mysqld(_Z18mysql_multi_updateP3THDP10TABLE_LISTP4ListI4ItemES6_PS4_y15enum_duplicatesbP18st_select_lex_unitP13st_select_lexPP12multi_update+0x122)[0x7fe009c2b732]
      /usr/sbin/mysqld(_Z21mysql_execute_commandP3THD+0x69aa)[0x7fe009b93aea]
      /usr/sbin/mysqld(_Z11mysql_parseP3THDPcjP12Parser_state+0x22e)[0x7fe009b9686e]
      /usr/sbin/mysqld(_Z16dispatch_command19enum_server_commandP3THDPcj+0x25db)[0x7fe009b99d2b]
      /usr/sbin/mysqld(_Z10do_commandP3THD+0x169)[0x7fe009b9a5a9]
      /usr/sbin/mysqld(_Z24do_handle_one_connectionP3THD+0x18a)[0x7fe009c5d78a]
      /usr/sbin/mysqld(handle_one_connection+0x40)[0x7fe009c5d960]
      /lib64/libpthread.so.0(+0x7dc5)[0x7fe009328dc5]
      /lib64/libc.so.6(clone+0x6d)[0x7fe00774873d]
      

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              GeoffMontee Geoff Montee (Inactive)
              Votes:
              1 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3h
                  3h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.